# smb-rs

./: Cargo.toml
.github/workflows/: build.yml
crates/smb/: Cargo.toml
crates/smb-dtyp/: Cargo.toml
crates/smb-dtyp-derive/src/: lib.rs
crates/smb-dtyp/src/: lib.rs
crates/smb-fscc/: Cargo.toml
crates/smb-fscc/src/: lib.rs
crates/smb-msg/: Cargo.toml
crates/smb-msg/src/: lib.rs  tree_connect.rs
crates/smb-rpc/: Cargo.toml
crates/smb-rpc-derive/: Cargo.toml
crates/smb-rpc-derive/src/: gen_iface.rs  lib.rs
crates/smb-rpc-derive/src/idl/: idl.pest  syntax.rs
crates/smb-rpc/src/: interface.rs  lib.rs  pdu.rs
crates/smb-rpc/src/idl/: srvsvc.idl
crates/smb-rpc/src/interface/: srvsvc.rs  tests.rs
crates/smb-transport/: Cargo.toml
crates/smb-transport/src/rdma/: smbd.rs
crates/smb-transport/src/tcp/: transport.rs
crates/smb/src/: connection.rs  resource.rs  tree.rs
crates/smb/src/connection/worker/parallel/: async_backend.rs
crates/smb/src/resource/: file.rs
crates/smb/src/session/: setup.rs
smb-cli/src/: info.rs
