[package]
name = "smb-msg"
readme = "README.md"
description = "SMB Messages and structures for `smb-rs`"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["both"]
client = []
server = []
both = ["client", "server"]

[dependencies]
smb-dtyp = { path = "../smb-dtyp", version = "0.10.4" }
smb-fscc = { path = "../smb-fscc", version = "0.10.4" }

binrw = { workspace = true }
modular-bitfield = { workspace = true }
time = { workspace = true }
pastey = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
smb-tests = { path = "../smb-tests", version = "0.10.4" }
const_format = { workspace = true }
