[package]
name = "smb-rpc-derive"
description = "Derive macros of MS-RPC implementations for `smb-rs`"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true


[lib]
proc-macro = true

[dependencies]
smb-dtyp = { workspace = true }

syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

pest = { workspace = true }
pest_derive = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
